--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Prateek Pandey",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "words-to-numbers": "^1.3.1"
   }
 }
